Loading rails_blog assets and adding application styles

--- a/app/views/layouts/rails_blog/application.html.haml
+++ b/app/views/layouts/rails_blog/application.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title RailsBlog
-    = stylesheet_link_tag "application", :media => "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = stylesheet_link_tag "rails_blog/application", :media => "all", "data-turbolinks-track" => true
+    = javascript_include_tag "rails_blog/application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
     #general_wrapper
