Changing font style

--- a/app/assets/stylesheets/rails_blog/scaffolds.css.scss
+++ b/app/assets/stylesheets/rails_blog/scaffolds.css.scss
@@ -1,14 +1,16 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: "Helvetica Neue",sans-serif;
+  font-family: "ff-tisa-web-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+  //font-family: "Helvetica Neue",sans-serif;
   //font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: "Helvetica Neue",sans-serif;
+  font-family: "ff-tisa-web-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+  //font-family: "Helvetica Neue",sans-serif;
   //font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
