--- a/app/views/layouts/rails_blog/application.html.haml
+++ b/app/views/layouts/rails_blog/application.html.haml
@@ -14,5 +14,5 @@
             = render_flash_messages
             = yield
         .span3
-          = render :partial => "layouts/rails_blog/application/sidebar"
+          =# render :partial => "layouts/rails_blog/application/sidebar"
       = render :partial => "layouts/rails_blog/application/footer"
