--- a/app/views/rails_blog/posts/index.html.haml
+++ b/app/views/rails_blog/posts/index.html.haml
@@ -1,21 +1,12 @@
-%h1 Listing posts
-
-%table
-  %tr
-    %th Title
-    %th Content
-    %th
-    %th
-    %th
-
-  - @posts.each do |post|
-    %tr
-      %td= post.title
-      %td= post.content
-      %td= link_to 'Show', post
-      %td= link_to 'Edit', edit_post_path(post)
-      %td= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Post', new_post_path
+- @posts.each do |post|
+  .post-wrapper
+    .row-fluid.post-wrapper-upper
+      .span9
+        %h2.post-title
+          = post.title
+        %p.post-info
+          = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+      .span3
+        %img.img-circle.img-author
+    %p.post-content
+      = post.content
