--- a/app/assets/stylesheets/rails_blog/application/footer.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/footer.css.scss
@@ -1,5 +1,9 @@
 footer {
   margin-top: 30px;
-  padding: 15px 0px;
-  border-top: 1px solid #eeeeee;
+  
+  .footer-container {
+    padding: 15px 0px;
+    width: 960px;
+    margin: 0 auto;
+  }
 }
