--- a/app/assets/stylesheets/rails_blog/application/header.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/header.css.scss
@@ -1,26 +1,26 @@
-.page-header-main {
-  h1 {
-    font-size: 60px;
-    line-height: 60px;
+header {
+  background-color: #121b21;
+  padding: 10px 0px 10px;
+  margin-bottom: 40px;
+  font-family: "Helvetica Neue",sans-serif;
+  
+  .header-container {
+    width: 960px;
+    margin: 0 auto;
 
-    a {
-      color: #333333;
-      text-decoration: none;
-    }
-  }
-}
+    h1 {
+      margin: 0px;
+      font-size: 45px;
+      line-height: 60px;
 
-.header_top_bar {
-  .menu_item {
-    margin-right: 10px;
+      a {
+        color: #c4cbcf;
+        text-decoration: none;
+      }
 
-    .new_post {
-      color: black;
-      font-weight: bold;
-    }
-
-    .user_email {
-      color: black;
+      a:hover {
+        color: white;
+      }
     }
   }
 }
