--- a/app/views/layouts/rails_blog/application/_header.html.haml
+++ b/app/views/layouts/rails_blog/application/_header.html.haml
@@ -1,6 +1,4 @@
-.header_top_bar
-  =# render :partial => "layouts/rails_blog/application/header/top_bar"
-.page-header.page-header-main
+.header-container
   %h1
     = link_to "AgileKoding", root_path
     %small Blog
