Adding posts pagination

--- a/app/assets/stylesheets/rails_blog/posts.css.scss
+++ b/app/assets/stylesheets/rails_blog/posts.css.scss
@@ -16,6 +16,7 @@
 
 .post-info {
   font-size: 17px;
+  font-style: italic;
   color: #b3b3b1;
 }
 
@@ -28,6 +29,7 @@
 
 .post-content {
   font-size: 17px;
+  line-height: 22px;
   line-height: 1.2;
   text-align: justify;
 }
