--- a/app/assets/stylesheets/rails_blog/application/header.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/header.css.scss
@@ -1,8 +1,6 @@
 header {
-  background-color: #121b21;
   padding: 10px 0px 10px;
-  margin-bottom: 40px;
-  font-family: "Helvetica Neue",sans-serif;
+  margin-bottom: 30px;
   
   .header-container {
     width: 960px;
@@ -10,16 +8,11 @@ header {
 
     h1 {
       margin: 0px;
-      font-size: 45px;
+      font-size: 50px;
       line-height: 60px;
 
       a {
-        color: #c4cbcf;
-        text-decoration: none;
-      }
-
-      a:hover {
-        color: white;
+        color: #999;
       }
     }
   }
