Adding sidebar partial view to the layout

--- a/app/views/layouts/rails_blog/application.html.haml
+++ b/app/views/layouts/rails_blog/application.html.haml
@@ -16,7 +16,7 @@
             = render_flash_messages
             = yield
         .span3
-          =# render :partial => "layouts/rails_blog/application/sidebar"
+          = render :partial => "layouts/rails_blog/application/sidebar"
 
     %footer
       = render :partial => "layouts/rails_blog/application/footer"
