Adding latest posts list to the sidebar

--- a/app/views/layouts/rails_blog/application/sidebar_widgets/_latest_posts.html.haml
+++ b/app/views/layouts/rails_blog/application/sidebar_widgets/_latest_posts.html.haml
@@ -1,4 +1,9 @@
 .latest-posts-wrapper.sidebar-widget
   %h4 Latest posts
+  %ul
+    - Rails.cache.fetch('latest_posts'){ RailsBlog::Post.limit(8) }.each do |post|
+      %li
+        .latest_post_item
+          = link_to post.title, post
   .offset1
     = link_to "All our posts ...", "#"
