Sidebar search in a partial view

--- a/app/views/layouts/rails_blog/application/_sidebar.html.haml
+++ b/app/views/layouts/rails_blog/application/_sidebar.html.haml
@@ -1,5 +1,3 @@
-.search-wrapper
-  %input{:type => "text", :placeholder => "Search..."}
-
+= render :partial => "layouts/rails_blog/application/sidebar_widgets/search"
 = render :partial => "layouts/rails_blog/application/sidebar_widgets/about_us"
 = render :partial => "layouts/rails_blog/application/sidebar_widgets/latest_posts"
