--- a/app/assets/stylesheets/rails_blog/application/sidebar_widgets/latest_posts.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/sidebar_widgets/latest_posts.css.scss
@@ -1,9 +1,7 @@
-.search-wrapper {
-  margin: 25px 0px 20px;
-}
-
-.latest_post_item {
-  a {
-    font-size: 15px !important;
+ul.latest_posts_list {
+  li {
+    a {
+      font-size: 15px !important;
+    }
   }
 }
