Adding post partial view

--- a/app/views/rails_blog/posts/show.html.haml
+++ b/app/views/rails_blog/posts/show.html.haml
@@ -1,11 +1,1 @@
-.post-wrapper
-  .row-fluid.post-wrapper-upper
-    .span9
-      %h2.post-title
-        = @post.title
-      %p.post-info
-        = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-    .span3
-      %img.img-circle.img-author
-  %p.post-content
-    = @post.content
+= render @post
