Refactoring header menu partial view

--- a/app/assets/stylesheets/rails_blog/application/header.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/header.css.scss
@@ -16,11 +16,11 @@ header {
       }
     }
 
-    .menu_list {
+    .menu-wrapper {
       float: right;
-      margin-top: 10px;
+      padding-top: 5px;
 
-      .menu_item {
+      .menu-item {
         background: #333333;
         padding: 6px 10px;
 
