--- a/app/views/layouts/rails_blog/application/sidebar_widgets/_search.html.haml
+++ b/app/views/layouts/rails_blog/application/sidebar_widgets/_search.html.haml
@@ -1,2 +1,3 @@
 .search-wrapper
-  %input{:type => "text", :placeholder => "Search..."}
+  %form{action: search_posts_path, method: "get"}
+    %input{:type => "text", :name => "query", :placeholder => "Search..."}
