Listing title posts are redirecting to show action

--- a/app/views/rails_blog/posts/_post.html.haml
+++ b/app/views/rails_blog/posts/_post.html.haml
@@ -2,7 +2,7 @@
   .row-fluid.post-wrapper-upper
     .span9
       %h2.post-title
-        = post.title
+        = link_to post.title, post
       %p.post-info
         = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
     .span3
