--- a/app/views/rails_blog/searches/index.html.haml
+++ b/app/views/rails_blog/searches/index.html.haml
@@ -1,1 +1,11 @@
 %h2= "Search results for ##{@search_criteria}"
+
+- @posts.each do |post|
+  .post-wrapper-condensed
+    .row-fluid.post-wrapper-upper
+      %h4.post-title
+        = link_to post.title, post
+      %p.post-info
+        = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+    %p.post-content
+      = post.description
