Adding archives controller

--- a/app/views/layouts/rails_blog/application/sidebar_widgets/_latest_posts.html.haml
+++ b/app/views/layouts/rails_blog/application/sidebar_widgets/_latest_posts.html.haml
@@ -5,4 +5,4 @@
       %li
         = link_to post.title, post
   .offset1
-    = link_to "All our posts ...", "#"
+    = link_to "All our posts ...", archive_path
