Setting Rails.blog_title where it's required

--- a/app/views/layouts/rails_blog/application.html.haml
+++ b/app/views/layouts/rails_blog/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title RailsBlog
+    %title= RailsBlog.blog_title
     = stylesheet_link_tag "rails_blog/application", :media => "all", "data-turbolinks-track" => true
     = javascript_include_tag "rails_blog/application", "data-turbolinks-track" => true
     = csrf_meta_tags
