--- a/app/views/layouts/rails_blog/application/_footer.html.haml
+++ b/app/views/layouts/rails_blog/application/_footer.html.haml
@@ -1,2 +1,2 @@
 .footer-container
-  %p Copyright 2013, AgileKoding. All rights reserved
+  %p= "Copyright 2013, #{RailsBlog.blog_title}. All rights reserved"
