--- a/app/views/layouts/rails_blog/application/_header.html.haml
+++ b/app/views/layouts/rails_blog/application/_header.html.haml
@@ -1,5 +1,5 @@
 .header-container
   = render :partial => "layouts/rails_blog/application/header/menu"
   %h1
-    = link_to "AgileKoding", root_path
+    = link_to RailsBlog.blog_title, root_path
     %small Blog
