Including small blog title configuration option

--- a/app/views/layouts/rails_blog/application/_header.html.haml
+++ b/app/views/layouts/rails_blog/application/_header.html.haml
@@ -2,4 +2,4 @@
   = render :partial => "layouts/rails_blog/application/header/menu"
   %h1
     = link_to RailsBlog.blog_title, root_path
-    %small Blog
+    %small= RailsBlog.small_blog_title
