Including sidebar widgets configuration

--- a/app/views/layouts/rails_blog/application/_sidebar.html.haml
+++ b/app/views/layouts/rails_blog/application/_sidebar.html.haml
@@ -1,3 +1,2 @@
-= render :partial => "layouts/rails_blog/application/sidebar_widgets/search"
-= render :partial => "layouts/rails_blog/application/sidebar_widgets/about_us"
-= render :partial => "layouts/rails_blog/application/sidebar_widgets/latest_posts"
+- RailsBlog.sidebar_widgets.sorted.each do |widget|
+  = render :partial => "layouts/rails_blog/application/sidebar_widgets/#{widget[:name]}"
