--- a/app/views/layouts/rails_blog/application/_sidebar.html.haml
+++ b/app/views/layouts/rails_blog/application/_sidebar.html.haml
@@ -1,2 +1,2 @@
 - RailsBlog.sidebar_widgets.sorted.each do |widget|
-  = render :partial => "layouts/rails_blog/application/sidebar_widgets/#{widget[:name]}", :locals => { :widget => widget }
+  = render :partial => "rails_blog/sidebar/#{widget[:name]}", :locals => { :widget => widget }
