Verifying that partial sidebar widget view exists and generating default sidebar templates in dummy app

--- a/app/views/layouts/rails_blog/application/_sidebar.html.haml
+++ b/app/views/layouts/rails_blog/application/_sidebar.html.haml
@@ -1,2 +1,3 @@
 - RailsBlog.sidebar_widgets.sorted.each do |widget|
-  = render :partial => "rails_blog/sidebar/#{widget[:name]}", :locals => { :widget => widget }
+  - if File.exist?(Rails.root.join('app', 'views', 'rails_blog', 'sidebar', widget[:name].to_s))
+    = render :partial => "rails_blog/sidebar/#{widget[:name]}", :locals => { :widget => widget }
