--- a/lib/generators/rails_blog/templates/sidebar/_latest_posts.html.erb
+++ b/lib/generators/rails_blog/templates/sidebar/_latest_posts.html.erb
@@ -3,7 +3,7 @@
   <ul class="latest-posts-list">
     <% Rails.cache.fetch('latest_posts'){ RailsBlog::Post.limit(8) }.each do |post| %>
       <li>
-        <%= link_to post.title, post %>
+        <%= link_to post.title, custom_post_path(*post.url_params) %>
       </li>
     <% end %>
   </ul>
