--- a/app/assets/stylesheets/rails_blog/application/header.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/header.css.scss
@@ -7,6 +7,7 @@ header {
     margin: 0 auto;
 
     h1 {
+      padding-top: 15px;
       margin: 0px;
       font-size: 50px;
       line-height: 60px;
