Including JQuery in application.js file

--- a/app/views/layouts/rails_blog/application/header/_menu.html.haml
+++ b/app/views/layouts/rails_blog/application/header/_menu.html.haml
@@ -1,3 +1,9 @@
 .menu-wrapper.clearfix
-  %span.menu-item
-    = link_to 'Sign in', new_user_session_path
+  - if user_signed_in?
+    %span.menu-item
+      = link_to current_user.email, "#"
+    %span.menu-item
+      = link_to 'Sign out', destroy_user_session_path, :method => :delete
+  - else
+    %span.menu-item
+      = link_to 'Sign in', new_user_session_path
