Adding Profile controller and index action

--- a/app/assets/stylesheets/rails_blog/application/application.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/application.css.scss
@@ -23,3 +23,7 @@ input[type="text"], input[type="password"], input[type="email"] {
 input[type="submit"].btn-large {
   font-size: 15.5px !important;
 }
+
+.alert {
+  margin-bottom: 35px !important;
+}
