--- a/app/views/layouts/rails_blog/application/header/_menu.html.haml
+++ b/app/views/layouts/rails_blog/application/header/_menu.html.haml
@@ -1,7 +1,7 @@
 .menu-wrapper.clearfix
   - if user_signed_in?
     %span.menu-item
-      = link_to current_user.email, "#"
+      = link_to current_user.email, profile_path
     %span.menu-item
       = link_to 'Sign out', destroy_user_session_path, :method => :delete
   - else
