--- a/app/views/rails_blog/profile/index.html.haml
+++ b/app/views/rails_blog/profile/index.html.haml
@@ -12,4 +12,5 @@
       .controls
         = f.text_field :name, :class => "input-xxlarge"
 
-    = f.submit "Save changes", :class => "btn btn-inverse btn-large"
+    .actions
+      = f.submit "Save changes", :class => "btn btn-inverse btn-large"
