--- a/app/assets/stylesheets/rails_blog/searches.css.scss
+++ b/app/assets/stylesheets/rails_blog/searches.css.scss
@@ -7,7 +7,7 @@
   
   .post-wrapper-upper {
     .post-title {
-      margin-bottom: 2px;
+      margin-bottom: 4px;
 
       a {
         color: #333333;
@@ -18,7 +18,12 @@
       font-size: 15px;
       font-style: italic;
       color: #b3b3b1;
-      margin-bottom: 5px;
+      margin-bottom: 6px;
+      font-size: 13px;
+
+      a {
+        color: #b3b3b1;
+      }
     }
   }
   
