--- a/app/views/rails_blog/posts/_post.html.haml
+++ b/app/views/rails_blog/posts/_post.html.haml
@@ -4,8 +4,9 @@
       %h2.post-title
         = link_to post.title, custom_post_path(*post.url_params)
       %p.post-info
-        = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+        = link_to post.user.name, post.user
+        = post.published_at_description
     .span3
-      %img.img-circle.img-author
+      = gravatar_image_tag(post.user.email, :alt => post.user.name, :class => 'img-circle img-author', :gravatar => { :size => 80 })
   %p.post-content
     = post.body
