Adding markdown to the posts

--- a/app/assets/stylesheets/rails_blog/posts.css.scss
+++ b/app/assets/stylesheets/rails_blog/posts.css.scss
@@ -35,8 +35,10 @@
   }
 
   .post-content {
-    font-size: 17px;
-    line-height: 22px;
-    line-height: 1.2;
+    p {
+      font-size: 17px;
+      line-height: 22px;
+      line-height: 1.2;
+    }
   }
 }
