--- a/app/assets/stylesheets/rails_blog/searches.css.scss
+++ b/app/assets/stylesheets/rails_blog/searches.css.scss
@@ -28,9 +28,11 @@
   }
   
   .post-content {
-    font-size: 15px;
-    line-height: 16px !important;
-    line-height: 1.2;
+    p {
+      font-size: 15px;
+      line-height: 16px !important;
+      line-height: 1.2;
+    }
   }
 }
 
