--- a/app/views/rails_blog/posts/_post.html.haml
+++ b/app/views/rails_blog/posts/_post.html.haml
@@ -8,5 +8,5 @@
         = post.published_at_description
     .span3
       = gravatar_image_tag(post.user.email, :alt => post.user.name, :class => 'img-circle img-author', :gravatar => { :size => 80 })
-  %p.post-content
-    = post.body
+  .post-content
+    = preserve RailsBlog::Markdown.render(post.body).html_safe
