The blog title can be an image

--- a/app/assets/stylesheets/rails_blog/application/application.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/application.css.scss
@@ -31,3 +31,8 @@ input[type="submit"].btn-large {
 .actions {
   margin-top: 20px;
 }
+
+.blog-title-image {
+  max-width: 200px;
+  max-height: 100px;
+}
