--- a/app/views/layouts/rails_blog/application/_header.html.haml
+++ b/app/views/layouts/rails_blog/application/_header.html.haml
@@ -1,5 +1,8 @@
 .header-container
   = render :partial => "layouts/rails_blog/application/header/menu"
   %h1
-    = link_to RailsBlog.blog_title, root_path
+    - if RailsBlog.blog_title_image
+      = link_to image_tag(RailsBlog.blog_title_image, class: "blog-title-image"), root_path
+    - else
+      = link_to RailsBlog.blog_title, root_path
     %small= RailsBlog.small_blog_title
