--- a/app/views/rails_blog/posts/_post.html.haml
+++ b/app/views/rails_blog/posts/_post.html.haml
@@ -7,6 +7,6 @@
         = link_to post.user.name, post.user
         = post.published_at_description
     .span3
-      = gravatar_image_tag(post.user.email, :alt => post.user.name, :class => 'img-circle img-author', :gravatar => { :size => 80 })
+      = link_to gravatar_image_tag(post.user.email, :alt => post.user.name, :class => 'img-circle img-author', :gravatar => { :size => 80 }), post.user
   .post-content
     = preserve RailsBlog::Markdown.render(post.body).html_safe
