--- a/app/views/rails_blog/users/show.html.haml
+++ b/app/views/rails_blog/users/show.html.haml
@@ -1,9 +1,9 @@
-%p#notice= notice
-
-%p
-  %b Name:
-  = @user.name
-
-= link_to 'Edit', edit_user_path(@user)
-\|
-= link_to 'Back', users_path
+.user-wrapper
+  .row-fluid
+    .span2
+      = gravatar_image_tag(@user.email, :alt => @user.name, :class => 'img-circle img-author', :gravatar => { :size => 90 })
+    .span10
+      %h2.user-name
+        = @user.name
+      %p.user-email
+        = @user.email
