--- a/app/views/layouts/rails_blog/application/header/_menu.html.haml
+++ b/app/views/layouts/rails_blog/application/header/_menu.html.haml
@@ -2,7 +2,7 @@
   - if user_signed_in?
     - if current_user.admin?
       %span.menu-item
-        = link_to 'Administration', new_post_path
+        = link_to 'Administration', administration_posts_path
     %span.menu-item
       = link_to 'New post', new_post_path
     %span.menu-item
