--- a/app/views/rails_blog/administration/posts/_post.html.haml
+++ b/app/views/rails_blog/administration/posts/_post.html.haml
@@ -5,7 +5,7 @@
         %h3.post-title
           = link_to post.title, custom_post_path(*post.url_params)
         %p.post-info
-          = link_to post.user.name, post.user
+          = link_to post.author.name, post.author
           = post.published_at_description
       .span3
-        = link_to gravatar_image_tag(post.user.email, :alt => post.user.name, :class => 'img-circle img-author', :gravatar => { :size => 60 }), post.user
+        = link_to gravatar_image_tag(post.author.email, :alt => post.author.name, :class => 'img-circle img-author', :gravatar => { :size => 60 }), post.author
