--- a/app/views/rails_blog/searches/index.html.haml
+++ b/app/views/rails_blog/searches/index.html.haml
@@ -6,7 +6,7 @@
       %h4.post-title
         = link_to post.title, custom_post_path(*post.url_params)
       %p.post-info
-        = link_to post.user.name, post.user
+        = link_to post.author.name, post.author
         = post.published_at_description
     .post-content
       = preserve RailsBlog::Markdown.render(post.search_description).html_safe
