Adding post state actions to administration namespace

--- a/app/assets/stylesheets/rails_blog/administration/posts.css.scss
+++ b/app/assets/stylesheets/rails_blog/administration/posts.css.scss
@@ -45,4 +45,65 @@
       }
     }
   }
+
+  .post-wrapper-show {
+    margin-bottom: 50px;
+
+    .posts-available-states {
+      margin-bottom: 20px;
+      background-color: #666;
+
+      .post-available-state {
+        padding: 6px 10px;
+        float: left;
+
+        a {
+          color: #EEE;
+        }
+      }  
+    }
+    
+    .post-wrapper-upper {
+      margin-bottom: 15px;
+      
+      .post-title {
+        margin-bottom: 2px;
+
+        a {
+          color: #333333;
+        }
+      }
+
+      .post-info {
+        font-size: 17px;
+        font-style: italic;
+        color: #b3b3b1;
+
+        a {
+          color: #b3b3b1;
+        }
+      }
+
+      .img-author {
+        float: right;
+        width: 80px;
+        height: 80px;
+        background: #CCC;
+      }
+    }
+
+    .post-content {
+      p {
+        font-size: 17px;
+        line-height: 22px;
+        line-height: 1.2;
+      }
+    }
+  }
+}
+
+.not-posts {
+  color: #b3b3b1;
+  font-size: 17px;
+  font-style: italic;
 }
