--- a/app/assets/stylesheets/rails_blog/application/sidebar_widgets/latest_posts.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/sidebar_widgets/latest_posts.css.scss
@@ -1,7 +1,5 @@
-ul.latest-posts-list {
-  li {
-    a {
-      font-size: 15px !important;
-    }
+.latest-posts-wrapper {
+  a {
+    font-size: 15px !important;
   }
 }
