--- a/app/assets/stylesheets/rails_blog/posts.css.scss
+++ b/app/assets/stylesheets/rails_blog/posts.css.scss
@@ -42,3 +42,13 @@
     }
   }
 }
+
+form#new_post {
+  input[type='text'], textarea {
+    width: 100%;
+  }
+
+  textarea {
+    resize: none;
+  }
+}
