--- a/app/views/rails_blog/administration/posts/show.html.haml
+++ b/app/views/rails_blog/administration/posts/show.html.haml
@@ -1,1 +1,16 @@
-= render @post
+.administration
+  .post-wrapper-show
+    - if @post.aasm_events_for_current_state.present?
+      .posts-available-states.clearfix
+        - @post.aasm_events_for_current_state.each do |state|
+          .post-available-state= link_to state, administration_posts_action_path(state: state)
+    .row-fluid.post-wrapper-upper
+      .span9
+        %h2.post-title
+          = link_to @post.title, administration_post_path(@post)
+        %p.post-info
+          = @post.author.name
+      .span3
+        = gravatar_image_tag(@post.author.email, :alt => @post.author.name, :class => 'img-circle img-author', :gravatar => { :size => 80 })
+    .post-content
+      = preserve RailsBlog::Markdown.render(@post.body).html_safe
