--- a/app/views/layouts/rails_blog/administration/application/_admin_menu.html.haml
+++ b/app/views/layouts/rails_blog/administration/application/_admin_menu.html.haml
@@ -1,5 +1,7 @@
 .admin-menu.clearfix
   .admin-menu-item
+    = link_to 'Drafted posts', administration_posts_by_state_path(state: "drafted")
+  .admin-menu-item
     = link_to 'Unpublished posts', administration_posts_by_state_path(state: "unpublished")
   .admin-menu-item
     = link_to 'Published posts', administration_posts_by_state_path(state: "published")
