Updating some styles and views

--- a/app/assets/stylesheets/rails_blog/administration/posts.css.scss
+++ b/app/assets/stylesheets/rails_blog/administration/posts.css.scss
@@ -50,7 +50,7 @@
     margin-bottom: 50px;
 
     .posts-available-states {
-      margin-bottom: 20px;
+      margin: -20px 0px 20px;
       background-color: #666;
 
       .post-available-state {
