--- a/app/assets/stylesheets/rails_blog/application/application.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/application.css.scss
@@ -25,6 +25,7 @@ a.btn {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   border-radius: 0px !important;
   height: 21px !important;
+  color: white !important;
 }
 
 input[type="submit"].btn-large {
