Adding before_filter to PostsController and refactoring views

--- a/app/views/rails_blog/posts/show.html.haml
+++ b/app/views/rails_blog/posts/show.html.haml
@@ -1,4 +1,5 @@
 = render @post
-.row-fluid
-  .social-networks.pull-right
-    = social_share_button_tag(@post.title)
+- if @post.published?
+  .row-fluid
+    .social-networks.pull-right
+      = social_share_button_tag(@post.title)
