--- a/app/views/rails_blog/posts/_post.html.haml
+++ b/app/views/rails_blog/posts/_post.html.haml
@@ -1,4 +1,7 @@
 .post-wrapper
+  - if post.unpublished?
+    .alert.alert-info
+      = "Successfully. Now the post needs to be authorized by an admin user."
   .row-fluid.post-wrapper-upper
     .span9
       %h2.post-title
@@ -10,3 +13,7 @@
       = link_to gravatar_image_tag(post.author.email, :alt => post.author.name, :class => 'img-circle img-author', :gravatar => { :size => 80 }), post.author
   .post-content
     = preserve RailsBlog::Markdown.render(post.body).html_safe
+  .actions
+    - if post.drafted?
+      = link_to "Edit post", edit_post_path(post), :class => "btn btn-inverse btn-large"
+      = link_to "Publish post", custom_post_path(*post.url_params, state: "unpublish"), :class => "btn btn-inverse btn-large"
