--- a/app/views/rails_blog/posts/show.html.haml
+++ b/app/views/rails_blog/posts/show.html.haml
@@ -1,5 +1,11 @@
 = render @post
+
 - if @post.published?
   .row-fluid
     .social-networks.pull-right
       = social_share_button_tag(@post.title)
+
+- if @post.drafted?
+  .actions
+    = link_to "Edit post", edit_post_path(@post), :class => "btn btn-inverse btn-large"
+    = link_to "Publish post", custom_post_path(*@post.url_params, state: "unpublish"), :class => "btn btn-inverse btn-large"
