--- a/app/views/rails_blog/posts/_post.html.haml
+++ b/app/views/rails_blog/posts/_post.html.haml
@@ -4,9 +4,9 @@
       %h2.post-title
         = link_to post.title, custom_post_path(*post.url_params)
       %p.post-info
-        = link_to post.author.name, post.author
+        = link_to post.author.name, user_path(post.author)
         = post.description
     .span3
-      = link_to gravatar_image_tag(post.author.email, :alt => post.author.name, :class => 'img-circle img-author', :gravatar => { :size => 80 }), post.author
+      = link_to gravatar_image_tag(post.author.email, :alt => post.author.name, :class => 'img-circle img-author', :gravatar => { :size => 80 }), user_path(post.author)
   .post-content
     = preserve RailsBlog::Markdown.render(post.body).html_safe
