--- a/app/assets/stylesheets/rails_blog/administration/users.css.scss
+++ b/app/assets/stylesheets/rails_blog/administration/users.css.scss
@@ -21,5 +21,11 @@
       font-style: italic;
       color: #b3b3b1;
     }
+
+    .user-actions {
+      a {
+        margin: 0px 5px;
+      }
+    }
   }
 }
